--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <body> 
             <!-- Star Logo -->
             <div class="container lightpink logo bg-ligtpink">
-            <img src="img/logo.jpg" alt="Logo Coding Design" width=100>
+            <img src="img/logo.jpg" alt="Logo Coding Design" width=300>
         </div>
             <!--End Logo-->
             
@@ -43,7 +43,7 @@
                              <a href="index.html" title="">Beranda</a>
                     </li>
                     <li>
-                            <a href="Tentang.html" title="">Tentang web</a>
+                            <a href="tentang.html" title="">Tentang web</a>
                     </li>
                     <li>
                             <a href="pembuat.html" title="">Tentang pembuat</a>
@@ -95,7 +95,7 @@
                 <figure class="snip1580"><img src="img/fashion.jpg" alt="profile-sample6"/>
                         <figcaption>
                         <h3>My And Your Fashion </h3>
-                        <h5>Tpis</h5>
+                        <h5>Tips</h5>
                         </figcaption><a href="#"></a>
                 </figure>
                 <!-- End Snip -->
@@ -103,7 +103,7 @@
                 <!-- Star Youtube -->
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/HX57Bju7rz4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/x-cbaBV-_ww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                
+
                 <!-- End Youtube -->
 
                 </div>
@@ -124,7 +124,7 @@
                              <a href="index.html" title="">Beranda</a>
                     </li>
                     <li>
-                            <a href="Tentang.html" title="">Tentang Kami</a>
+                            <a href="tentang.html" title="">Tentang Kami</a>
                     </li>
                     <li>
                             <a href="Pembuat.html" title="">pembuat</a>
