--- a/gayahidup.html
+++ b/gayahidup.html
@@ -32,7 +32,7 @@
                              <a href="index.html" title="">Beranda</a>
                     </li>
                     <li>
-                            <a href="Tentang.html" title="">Tentang web</a>
+                            <a href="tentang.html" title="">Tentang web</a>
                     </li>
                     <li>
                             <a href="pembuat.html" title="">Tentang pembuat</a>
@@ -42,13 +42,13 @@
                     </li>                   
                     <li>
                              <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
-                </li>                    
-                <li>
+                    </li>                    
+                    <li>
                              <a href="makeup.html" title="">MakeUP</a>
-                </li>                    
-                <li>
+                    </li>                    
+                     <li>
                              <a href="hijab.html" title="">Hijab</a>
-                </li>
+                    </li>
                     <li>
                             <a href="pertanyaan.html" title="">pertanyaan</a>
                     </li>
@@ -101,7 +101,7 @@
                              <a href="index.html" title="">Beranda</a>
                     </li>
                     <li>
-                            <a href="Tentang.html" title="">Tentang Kami</a>
+                            <a href="tentang.html" title="">Tentang Kami</a>
                     </li>
                     <li>
                             <a href="pembuat.html" title="">pembuat</a>
