--- a/hijab.html
+++ b/hijab.html
@@ -32,7 +32,7 @@
                              <a href="index.html" title="">Beranda</a>
                     </li>
                     <li>
-                            <a href="Tentang.html" title="">Tentang web</a>
+                            <a href="tentang.html" title="">Tentang web</a>
                     </li>
                     <li>
                             <a href="pembuat.html" title="">Tentang pembuat</a>
@@ -111,7 +111,7 @@
                              <a href="index.html" title="">Beranda</a>
                     </li>
                     <li>
-                            <a href="Tentang.html" title="">Tentang Kami</a>
+                            <a href="tentang.html" title="">Tentang Kami</a>
                     </li>
                     <li>
                             <a href="pembuat.html" title="">pembuat</a>
