--- a/kontak.html
+++ b/kontak.html
@@ -30,7 +30,7 @@
                              <a href="index.html" title="">Beranda</a>
                     </li>
                     <li>
-                            <a href="Tentang.html" title="">Tentang web</a>
+                            <a href="tentang.html" title="">Tentang web</a>
                     </li>
                     <li>
                                 <a href="pembuat.html" title="">Tentang pembuat</a>
@@ -95,7 +95,7 @@
                              <a href="index.html" title="">Beranda</a>
                     </li>
                     <li>
-                            <a href="Tentang.html" title="">Tentang Kami</a>
+                            <a href="tentang.html" title="">Tentang Kami</a>
                     </li>
                     <li>
                             <a href="layanan.html" title="">layanan</a>
