--- a/makeUp.html
+++ b/makeUp.html
@@ -33,7 +33,7 @@
                              <a href="index.html" title="">Beranda</a>
                     </li>
                     <li>
-                            <a href="Tentang.html" title="">Tentang web</a>
+                            <a href="tentang.html" title="">Tentang web</a>
                     </li>
                     <li>
                             <a href="pembuat.html" title="">Tentang pembuat</a>
@@ -127,7 +127,7 @@
                              <a href="index.html" title="">Beranda</a>
                     </li>
                     <li>
-                            <a href="Tentang.html" title="">Tentang Kami</a>
+                            <a href="tentang.html" title="">Tentang Kami</a>
                     </li>
                     <li>
                             <a href="pembuat.html" title="">pembuat</a>
