--- a/pembuat.html
+++ b/pembuat.html
@@ -31,7 +31,7 @@
                              <a href="index.html" title="">Beranda</a>
                     </li>
                     <li>
-                            <a href="Tentang.html" title="">Tentang web</a>
+                            <a href="tentang.html" title="">Tentang web</a>
                     </li>
                     <li>
                                 <a href="pembuat.html" title="">Tentang pembuat</a>
@@ -43,7 +43,7 @@
                                         <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
                            </li>                    
                            <li>
-                                        <a href="makeup.html" title="">MakeUP</a>
+                                        <a href="makeUp.html" title="">MakeUP</a>
                            </li>                    
                            <li>
                                         <a href="hijab.html" title="">Hijab</a>
@@ -100,7 +100,7 @@
                              <a href="index.html" title="">Beranda</a>
                     </li>
                     <li>
-                            <a href="Tentang.html" title="">Tentang Kami</a>
+                            <a href="tentang.html" title="">Tentang Kami</a>
                     </li>
                     <li>
                                 <a href="gayahidup.html" title="">Gaya Hidup</a>
@@ -109,7 +109,7 @@
                                 <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
                    </li>                    
                    <li>
-                                <a href="makeup.html" title="">MakeUP</a>
+                                <a href="makeUp.html" title="">MakeUP</a>
                    </li>                    
                    <li>
                                 <a href="hijab.html" title="">Hijab</a>
