--- a/tentang.html
+++ b/tentang.html
@@ -32,7 +32,7 @@
                          <a href="index.html" title="">Beranda</a>
                 </li>
                 <li>
-                        <a href="Tentang.html" title="">Tentang web</a>
+                        <a href="tentang.html" title="">Tentang web</a>
                 </li>
                 <li>
                         <a href="pembuat.html" title="">Tentang pembuat</a>
@@ -44,7 +44,7 @@
                          <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
             </li>                    
             <li>
-                         <a href="makeup.html" title="">MakeUP</a>
+                         <a href="makeUp.html" title="">MakeUP</a>
             </li>                    
             <li>
                          <a href="hijab.html" title="">Hijab</a>
@@ -95,7 +95,7 @@
                              <a href="index.html" title="">Beranda</a>
                     </li>
                     <li>
-                            <a href="Tentang.html" title="">Tentang Kami</a>
+                            <a href="tentang.html" title="">Tentang Kami</a>
                     </li>
                     <li>
                             <a href="pembuat.html" title="">Tentang pembuat</a>
@@ -107,7 +107,7 @@
                             <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
                </li>                    
                <li>
-                            <a href="makeup.html" title="">MakeUP</a>
+                            <a href="makeUp.html" title="">MakeUP</a>
                </li>                    
                <li>
                             <a href="hijab.html" title="">Hijab</a>
