--- a/tentangperasaan.html
+++ b/tentangperasaan.html
@@ -30,7 +30,7 @@
                              <a href="index.html" title="">Beranda</a>
                     </li>
                     <li>
-                            <a href="Tentang.html" title="">Tentang web</a>
+                            <a href="tentang.html" title="">Tentang web</a>
                     </li>
                     <li>
                             <a href="pembuat.html" title="">Tentang pembuat</a>
@@ -42,7 +42,7 @@
                              <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
                 </li>                    
                 <li>
-                             <a href="makeup.html" title="">MakeUP</a>
+                             <a href="makeUp.html" title="">MakeUP</a>
                 </li>                    
                 <li>
                              <a href="hijab.html" title="">Hijab</a>
@@ -118,7 +118,7 @@
                              <a href="index.html" title="">Beranda</a>
                     </li>
                     <li>
-                            <a href="Tentang.html" title="">Tentang Kami</a>
+                            <a href="tentang.html" title="">Tentang Kami</a>
                     </li>
                     <li>
                             <a href="pembuat.html" title="">pembuat</a>
@@ -130,7 +130,7 @@
                                 <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
                    </li>                    
                    <li>
-                                <a href="makeup.html" title="">MakeUP</a>
+                                <a href="makeUp.html" title="">MakeUP</a>
                    </li>                    
                    <li>
                                 <a href="hijab.html" title="">Hijab</a>
