--- a/gayahidup.html
+++ b/gayahidup.html
@@ -44,7 +44,7 @@
                              <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
                     </li>                    
                     <li>
-                             <a href="makeup.html" title="">MakeUP</a>
+                             <a href="makeUp.html" title="">MakeUP</a>
                     </li>                    
                      <li>
                              <a href="hijab.html" title="">Hijab</a>
@@ -113,7 +113,7 @@
                                 <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
                    </li>                    
                    <li>
-                                <a href="makeup.html" title="">MakeUP</a>
+                                <a href="makeUp.html" title="">MakeUP</a>
                    </li>                    
                    <li>
                                 <a href="hijab.html" title="">Hijab</a>
