--- a/hijab.html
+++ b/hijab.html
@@ -44,7 +44,7 @@
                              <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
                 </li>                    
                 <li>
-                             <a href="makeup.html" title="">MakeUP</a>
+                             <a href="makeUp.html" title="">MakeUP</a>
                 </li>                    
                 <li>
                              <a href="hijab.html" title="">Hijab</a>
@@ -123,7 +123,7 @@
                                 <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
                    </li>                    
                    <li>
-                                <a href="makeup.html" title="">MakeUP</a>
+                                <a href="makeUp.html" title="">MakeUP</a>
                    </li>                    
                    <li>
                                 <a href="hijab.html" title="">Hijab</a>
