--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                              <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
                 </li>                    
                 <li>
-                             <a href="makeup.html" title="">MakeUP</a>
+                             <a href="makeUp.html" title="">MakeUP</a>
                 </li>                    
                 <li>
                              <a href="hijab.html" title="">Hijab</a>
@@ -136,7 +136,7 @@
                                 <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
                    </li>                     
                 <li>
-                                <a href="makeup.html" title="">MakeUP</a>
+                                <a href="makeUp.html" title="">MakeUP</a>
                    </li>                    
                    <li>
                                 <a href="hijab.html" title="">Hijab</a>
