--- a/kontak.html
+++ b/kontak.html
@@ -42,7 +42,7 @@
                                 <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
                    </li>                    
                    <li>
-                                <a href="makeup.html" title="">MakeUP</a>
+                                <a href="makeUp.html" title="">MakeUP</a>
                    </li>                    
                    <li>
                                 <a href="Hijab.html" title="">Hijab</a>
@@ -107,7 +107,7 @@
                                 <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
                    </li>                    
                    <li>
-                                <a href="makeup.html" title="">MakeUP</a>
+                                <a href="makeUp.html" title="">MakeUP</a>
                    </li>                    
                    <li>
                                 <a href="hijab.html" title="">Hijab</a>
