--- a/makeUp.html
+++ b/makeUp.html
@@ -45,7 +45,7 @@
                              <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
                 </li>                    
                 <li>
-                             <a href="makeup.html" title="">MakeUP</a>
+                             <a href="makeUp.html" title="">MakeUP</a>
                 </li>                    
                 <li>
                              <a href="hijab.html" title="">Hijab</a>
@@ -139,7 +139,7 @@
                                 <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
                    </li>                    
                    <li>
-                                <a href="makeup.html" title="">MakeUP</a>
+                                <a href="makeUp.html" title="">MakeUP</a>
                    </li>                    
                    <li>
                                 <a href="hijab.html" title="">Hijab</a>
