--- a/makeUp.html
+++ b/makeUp.html
@@ -39,7 +39,7 @@
                             <a href="pembuat.html" title="">Tentang pembuat</a>
                     </li>
                     <li>
-                             <a href="gaya.html" title="">Gaya Hidup</a>
+                             <a href="gayahidup.html" title="">Gaya Hidup</a>
                     </li>                   
                     <li>
                              <a href="tentangperasaan.html" title="">Tentang Perasaan</a>
