--- a/pertanyaan.html
+++ b/pertanyaan.html
@@ -62,9 +62,11 @@
                 <div class="container bg-beige">
                 <h1>Selamat Datang Di Erar Website</h1>
                 <h3>Website Ini Berisi tentang Informasi Mengenai Wanita</h3>
+                </div>
                 <!-- End Jumbotron -->
 
                 <!-- Star Pertanyaan -->
+                <div class="container bg-beige">
                 <h2>Pertanyaan</h2>
                 <p> Jika Ada Yang Ingin Ditanyakan silahkan bisa hubungi email/wa</p>
                 <h4>Kontak Erar Website</h4>
@@ -81,12 +83,16 @@
                         <br>
                         <input type="reset" name="hapus" id="hapus" size="50" value="hapus">
                 </form>
+                </div>
                 <!-- End Pertanyaan -->
                
                 <!-- Star menu Sekunder -->
+                <div class="container bg-beige">
                 <p>Email: <a href="mailto:erlinaariyanti07@gmail.com" title="erlinaariyanti07@gmail.com">erlinaariyanti07@gmail.com</a></p>
                 <p>WA: <a href="tel:+6289-535-192-1419" title="+6289-535-192-1419">+6289-535-192-1419"</a>  </p>      
-                <h4>menu</h4>
+                </div>
+                <div class="container bg-beige">
+                <h4>Menu Yang Terdapat Di Erar Website</h4>
                   <!-- Star Menu sekunder-->
             <ul>
                     <li>
@@ -96,7 +102,7 @@
                             <a href="tentang.html" title="">Tentang Kami</a>
                     </li>
                     <li>
-                            <a href="pembuat.html" title="">pembuat</a>
+                            <a href="pembuat.html" title="">Pembuat</a>
                     </li>
                     <li>
                                 <a href="gayahidup.html" title="">Gaya Hidup</a>
@@ -111,18 +117,20 @@
                                 <a href="hijab.html" title="">Hijab</a>
                    </li>
                     <li>
-                            <a href="pertanyaan.html" title="">pertanyaan</a>
+                            <a href="pertanyaan.html" title="">Pertanyaan</a>
                     </li>
                     <li>
-                            <a href="kontak.html" title="">kontak</a>
+                            <a href="kontak.html" title="">Kontak</a>
                     </li>
                 </ul>
-               
+                </div>
+
+                <div class="container bg-beige">
                 <h4>Media Sosial</h4>
                 <div class="container menu-primer">
                 <ul>
                     <li>
-                        <a href="https://www.facebook.com/profile.php?id=100031966777857" title="Facebook - erar website">
+                        <a href="https://www.facebook.com/erlina.erar" title="Facebook - erar website">
                             <img src="img/logo-facebook.jpg" alt="Logo Facebook" width="30">
                         </a>
                     </li>
