--- a/tentangperasaan.html
+++ b/tentangperasaan.html
@@ -69,6 +69,8 @@
                 <img src="img/perasaan.jpg" alt="Logo Coding Design" width="200">   
                 <h2>Tentang Perasaan</h2>
                 </div>
+                </div>
+                <div class="container bg-beige">
                 <p>
                         Jika berbicara soal perasaan wanita sangat banyak sekali tanda tanya bukan?
                         <br>Nah sekarang kita akan membahas tentang persaannya yang kata mereka sih sangat sulit untuk dimengerti.
@@ -104,13 +106,16 @@
                 Nah yang bagus itu yang kedua,karena jika kita baper hanya menggunakan hati saja,waduhh celaka lah kita,karena pastinya kita akan sangat terpuruk,makannya jadilah wanita yang kuat,bukan kuat soal fisik tapi kuat soal hati.
                 Jangan mudah memberikan hati kepada laki-laki yang hanya ingin singgah saja.Kita juga sebagai wanita harus bisa mengontrol diri kita agar kita tidak terus-terusan disakiti dan tidak terus masuk kedalam lubang yanng sama.
                 </p>
-
+                </div>
                 <!-- End Tentang Perasaan -->
-
+                
                 <!-- Star menu Sekunder -->
+                <div class="container bg-beige">
                 <h4>Erar Website</h4>
                 <p>Email: <a href="mailto:erlinaariyanti07@gmail.com" title="erlinaariyanti07@gmail.com">erlinaariyanti07@gmail.com</a></p>
                 <p>WA: <a href="tel:+6289-535-192-1419" title="+6289-535-192-1419">+6289-535-192-1419"</a>  </p>      
+                </div>
+                <div class="container bg-beige">
                 <h4>menu yang ada di erar website antara lain:</h4>
                   <!-- Star Menu sekunder-->
             <ul>
@@ -142,7 +147,9 @@
                             <a href="kontak.html" title="">kontak</a>
                     </li>
                 </ul>
+                </div>
                
+                <div class="container bg-beige">
                 <h4>Media Sosial</h4>
                 <div class="container menu-primer">
                 <ul>
