--- a/kontak.html
+++ b/kontak.html
@@ -61,9 +61,11 @@
                 <div class="container bg-beige">
                 <h1>kontak Erar Website</h1>
                 <h3>Web ini berisi tentang informasi mengenai wanita.</h3>
+                </div>
                 <!-- End Jumbotron -->
                 
                 <!-- Star Kontak Erar Website-->
+                <div class="container bg-beige">
                 <p>
                         Jika ada yang ingin ditanyakan silahkan hubungi kami di:
                         <div class="container menu-primer">
@@ -81,14 +83,18 @@
                             </ul>
                 </p>
                         </div>
+                </div>
                 <!-- End Kontak Erar Website-->
 
                 <!-- Star menu Sekunder -->
+                <div class="container bg-beige">
                 <h4>Erar Website</h4>
                 <p>web ini berisi tentang informasi mengenai wanita</p>
                 <p>Email: <a href="mailto:erlinaariyanti07@gmail.com" title="erlinaariyanti07@gmail.com">erlinaariyanti07@gmail.com</a></p>
                 <p>WA: <a href="tel:+6289-535-192-1419" title="+6289-535-192-1419">+6289-535-192-1419"</a>  </p>      
-                <h4>menu</h4>
+                </div>
+                <div class="container bg-beige">
+                <h4>Menu Yang Terdapat Di Erar Website</h4>
                   <!-- Star Menu sekunder-->
             <ul>
                     <li>
@@ -119,11 +125,14 @@
                             <a href="kontak.html" title="">kontak</a>
                     </li>
                 </ul>
-               
+                </div>
+
+                <div class="container bg-beige">
                 <h4>Media Sosial</h4>
                 <ul>
                     <li>
-                        <a href="https://www.facebook.com/profile.php?id=100031966777857" title="Facebook - erar website">
+                        <a href="https://www.facebook.com/erlina.erar" title="Facebook - erar website">
+                                <a href="https://www.facebook.com/profile.php?id=100031966777857" title="Facebook - erar website">
                             <img src="img/logo-facebook.jpg" alt="Logo Facebook" width="30">
                         </a>
                     </li>
