--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             <a href="tentang.html" title="">Tentang Kami</a>
                     </li>
                     <li>
-                            <a href="Pembuat.html" title="">pembuat</a>
+                            <a href="pembuat.html" title="">pembuat</a>
                     </li>
                     <li>
                                 <a href="gayahidup.html" title="">Gaya Hidup</a>
