--- a/index.html
+++ b/index.html
@@ -98,13 +98,37 @@
                         <h5>Tips</h5>
                         </figcaption><a href="#"></a>
                 </figure>
+                <figure class="snip1580"><img src="img/tentang.jpg" alt="profile-sample2"/>
+                        <figcaption>
+                        <h3>Erar Website</h3>
+                        <h5>About This Website</h5>
+                        </figcaption><a href="#"></a>
+                </figure>
+                <figure class="snip1580"><img src="img/erlin.jpg" alt="profile-sample7"/>
+                        <figcaption>
+                        <h3>About Me</h3>
+                        <h5>My Profil</h5>
+                        </figcaption><a href="#"></a>
+                </figure>
+                <figure class="snip1580"><img src="img/hijab.jpg" alt="profile-sample6"/>
+                        <figcaption>
+                        <h3>My And Your Hijab </h3>
+                        <h5>Tips And Tutorial</h5>
+                        </figcaption><a href="#"></a>
+                </figure>
+                <figure class="snip1580"><img src="img/gayahidup.jpg" alt="profile-sample6"/>
+                        <figcaption>
+                        <h3>Gaya Hidup </h3>
+                        <h5>Tips And Tutorial</h5>
+                        </figcaption><a href="#"></a>
+                </figure>
+                <figure class="snip1580"><img src="img/perasaan.jpg" alt="profile-sample6"/>
+                        <figcaption>
+                        <h3> Feeling </h3>
+                        <h5>My And Your Feeling</h5>
+                        </figcaption><a href="#"></a>
+                </figure>
                 <!-- End Snip -->
-                
-                <!-- Star Youtube -->
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/HX57Bju7rz4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/x-cbaBV-_ww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-                <!-- End Youtube -->
 
                 </div>
                 </div>
