--- a/pertanyaan.html
+++ b/pertanyaan.html
@@ -71,7 +71,7 @@
                 <p> Jika Ada Yang Ingin Ditanyakan silahkan bisa hubungi email/wa</p>
                 <h4>Kontak Erar Website</h4>
                 <form>
-                        <label>Email</label>
+                        <label>Petanyaan</label>
                         <br>
                         <input type="text" placeholder="masukan nama" id="nama"nama="nama">
                         <br>
